--- a/website/assets/css/styles.css
+++ b/website/assets/css/styles.css
@@ -262,7 +262,7 @@
      border-bottom: 1px solid #dab506;
 }
  .navbar a:hover {
-     background-color: antiquewhite;
+     background-color: #d4ab76;
 }
  .navbar a.active {
      color: #ffffff;
@@ -318,7 +318,7 @@
          border: none;
     }
      .navbar a:hover {
-         background-color: antiquewhite;
+         background-color: #d4ab76;
     }
      .navbar a.active {
          color: #ffffff;
@@ -431,7 +431,7 @@
      display: inline-block;
 }
 /*test*/
- .secondary-heading {
+ .secondary-heading[aria-hidden="true"] {
      visibility: hidden;
      font-size: 10px;
 }
