--- a/website/assets/css/styles.css
+++ b/website/assets/css/styles.css
@@ -262,7 +262,7 @@
      border-bottom: 1px solid #dab506;
 }
  .navbar a:hover {
-     background-color: #d4ab76;
+     background-color: #fbe0bd;
 }
  .navbar a.active {
      color: #ffffff;
