--- a/website/assets/css/styles.css
+++ b/website/assets/css/styles.css
@@ -237,7 +237,7 @@
      top: 50%;
      transform: translate(-50%, -50%);
 }
- .parallax-header {
+ .parallax-header, .parallax-header2 {
      font-size: 6em;
      color: rgb(255, 255, 255);
      text-shadow: -6px -1px 19px black;
@@ -332,7 +332,7 @@
 }
 /* Make welcome header fit smaller devices */
  @media screen and (max-width: 1460px) {
-     .parallax-header {
+     .parallax-header, .parallax-header2 {
          font-size: 6em;
          margin-top: 0.9em;
     }
@@ -341,6 +341,12 @@
      .parallax-header {
          font-size: 4em;
          margin-top: 2em;
+    }
+}
+/* End of query */
+@media screen and (max-width: 768px) {
+     .parallax-header2 {
+         font-size: 4em;
     }
 }
 /* End of query */
@@ -430,7 +436,6 @@
  .divorigins {
      display: inline-block;
 }
-/*test*/
  .secondary-heading[aria-hidden="true"] {
      visibility: hidden;
      font-size: 10px;
@@ -787,7 +792,7 @@
          margin-right: 60em;
     }
 }
- @media screen and (min-width: 5000px) {
+ @media screen and (min-width: 5001px) {
      #form {
          margin-left: 77em;
          margin-right: 77em;
