--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,16 +20,16 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
   <body>
-    <a id="skip-to-content" href="#content">Skip to the content.</a>
+   <!-- <a id="skip-to-content" href="#content">Skip to the content.</a> -->
 
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       
-      
+      <a href="{{ site.baseurl }}" class="btn">Home</a>
       <a href="{{ site.baseurl }}/rationale" class="btn">rationale</a>
       <a href="{{ site.baseurl }}/audit" class="btn">aduit</a>
-      <a href="{{ site.baseurl }}" class="btn">Home</a>
+     
       
     </header>
 
