--- a/website/assets/css/styles.css
+++ b/website/assets/css/styles.css
@@ -171,11 +171,16 @@
      min-height: 30em;
      position: relative;
      display: block;
-     padding: 10em;
+     padding: 1em;
      background-attachment: fixed;
      background-position: center;
      background-repeat: no-repeat;
      background-size: cover;
+}
+.hero-text {
+     min-height: 30em;
+     position: relative;
+     display: block;
 }
 /* Stop parallax scrolling for tablet and below devices */
  @media only screen and (max-device-width: 900px) {
@@ -192,7 +197,7 @@
      .parallax-image2 {
          background-image: url(../images/content_two.jpg);
          height: 6em;
-         min-height: 19em;
+         min-height: 7em;
          margin-bottom: 4em;
          position: relative;
          display: block;
@@ -202,6 +207,12 @@
          background-repeat: no-repeat;
          background-size: cover;
     }
+     .stories-text {
+         min-height: 7em; 
+         margin-bottom: 4em;
+         position: relative;
+         display: block;
+     }
 }
 /* End of query */
 /* Change mid image at tablet and below */
@@ -214,6 +225,12 @@
          background-position: center;
          background-size: cover;
     }
+     .stories-text {
+         min-height: 19em; 
+         margin-bottom: 4em;
+         position: relative;
+         display: block;
+     }
 }
 /* End of query */
 /* Make the middle image smaller at tablet and below */
@@ -234,8 +251,13 @@
  #stories-wrapper {
      text-align: center;
      position: absolute;
-     top: 50%;
+     top: 1%; 
      transform: translate(-50%, -50%);
+}
+@media screen and (max-width: 900px) {
+    #stories-wrapper {
+        top: 30%;
+    }
 }
  .parallax-header, .parallax-header2 {
      font-size: 6em;
@@ -334,7 +356,6 @@
  @media screen and (max-width: 1460px) {
      .parallax-header, .parallax-header2 {
          font-size: 6em;
-         margin-top: 0.9em;
     }
 }
  @media screen and (max-width: 768px) {
@@ -344,7 +365,7 @@
     }
 }
 /* End of query */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 900px) {
      .parallax-header2 {
          font-size: 4em;
     }
@@ -517,6 +538,7 @@
      align-items: center;
      margin-top: 2em;
      padding: 5em 14em 6em 15em;
+         margin-bottom: 2em;
 }
 /* Move the content to a better position */
  @media (max-width: 1920px) and (max-height: 1080px) {
@@ -802,10 +824,11 @@
  .contact-heading {
      text-align: center;
      color: burlywood;
-     font-size: 2em;
+     font-size: 2.4em;
      margin-bottom: 40px;
      font-family: 'Roboto', sans-serif;
      text-shadow: 1px 1px 0px black;
+     margin-right: 2em;
 }
 /* Apply a smaller heading for mobiles */
  @media screen and (max-width: 363px) {
