--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,8 @@
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       
       <a href="{{ site.baseurl }}" class="btn">Home</a>
-      <a href="{{ site.baseurl }}/rationale" class="btn">rationale</a>
-      <a href="{{ site.baseurl }}/audit" class="btn">aduit</a>
+      <a href="{{ site.baseurl }}/rationale" class="btn">Rationale</a>
+      <a href="{{ site.baseurl }}/audit" class="btn">Full Aduit Tests</a>
      
       
     </header>
