--- a/website/assets/css/styles.css
+++ b/website/assets/css/styles.css
@@ -447,8 +447,6 @@
      clear: both;
      padding: 1.2em;
      font-size: 0.8em;
-    /* font-weight: bold;
-     */
      color: #000000;
      text-align: center;
 }
@@ -724,7 +722,7 @@
      padding: 50px 40px 35px 40px;
      box-shadow: 0px 8px 18px 8px rgba(17,21,23,.1);
 }
-/* From widths change as resolutions get larger */
+/* Form widths change as resolutions get larger */
  @media screen and (min-width: 1025px) {
      #form {
          margin-left: 3em;
@@ -815,7 +813,7 @@
      overflow: auto;
      resize: vertical;
 }
-/* From input areas */
+/* Form input areas */
  .form-area {
      display: block;
      width: 100%;
